--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,8 @@ Layout/MultilineMethodCallIndentation:
   Enabled: false
 Layout/RescueEnsureAlignment:
   Enabled: false
+Lint/AmbiguousOperatorPrecedence:
+  Enabled: false
 
 Metrics/AbcSize:
   Enabled: false
